Downgrade to Java 17 and remove Java 21 features for Android compatibility
Java Records, Virtual Threads, and SequencedCollection methods cause
Android D8 desugaring failures ("Global synthetics are not supported
with D8"). This commit ensures OpenPDF works on Android by:

- Lowering Java source/target from 21 to 17 in pom.xml
- Replacing all 28 Java Records across 15 files with regular final
  classes (public final fields + accessor methods for backward compat)
- Replacing Virtual Threads (Executors.newVirtualThreadPerTaskExecutor)
  with CachedThreadPool in PdfBatch.java
- Replacing SequencedCollection methods (getFirst/getLast) with
  standard List access (get(0)/get(size()-1))
- Updating tests to remove Virtual Thread assertions

All 2264 tests pass. Bytecode verification confirms zero
java.lang.Record references remain.

Fixes #1512

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>